--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -58,6 +59,27 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-war-plugin</artifactId>
+			<executions>
+			<execution>
+			<id>default-war</id>
+			<phase>none</phase>
+			</execution>
+			
+			<execution>
+			<id>war-exploded</id>
+			<configuration>
+			<webappDirectory>target/deploy</webappDirectory>
+			<archiveClasses>true</archiveClasses>
+			</configuration>
+			<phase>prepare-package</phase>
+			<goals><goal>exploded</goal></goals>
+			</execution>
+			
+			</executions>
 			</plugin>
 		</plugins>
 	</build>
